--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
  <HEAD>
   <TITLE> NAm N </TITLE>
@@ -335,4 +335,4 @@ var ParticlePool = (function() {
         margin-bottom: 5px;
         text-align: center;">LPN</div>
  </BODY>
-</HTML> -->
+</HTML>
