--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <HTML>
 
@@ -518,4 +518,4 @@ var ParticlePool = (function() {
 
  </BODY>
 
-</HTML> -->
+</HTML>
